--- a/index.html
+++ b/index.html
@@ -188,8 +188,76 @@ h1 {
     <div id="output" aria-live="polite"></div>
    
   </div>
+
+  <style>
+ 
+  #backBtn {
+    background: var(--accent2);
+    color: var(--text);
+    border: none;
+    padding: 5px 10px;
+    border-radius: 4px;
+    cursor: pointer;
+    display: none;
+    font-weight: bold;
+  }
+  #links, #number-section {
+    padding: 15px;
+  }
+  .link {
+    display: block;
+    padding: 6px 8px;
+    margin-bottom: 4px;
+    background: var(--card);
+    color: var(--accent);
+    text-decoration: none;
+    border-radius: 4px;
+    font-weight: bold;
+    transition: background 0.2s, color 0.2s;
+  }
+  .link:hover {
+    background: var(--accent);
+    color: var(--text);
+  }
+  .pages {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 8px;
+    margin-top: 10px;
+  }
+  .pages a {
+    background: var(--card);
+    color: var(--text);
+    padding: 4px 8px;
+    border-radius: 3px;
+    text-decoration: none;
+    font-size: 0.85rem;
+    transition: background 0.2s, color 0.2s;
+  }
+  .pages a:hover {
+    background: var(--accent2);
+    color: var(--text);
+  }
+  .spinner-container {
+    display: flex;
+    justify-content: center;
+    padding: 20px 0;
+  }
+  .spinner {
+    width: 30px;
+    height: 30px;
+    border: 4px solid rgba(255,255,255,0.1);
+    border-top-color: var(--accent);
+    border-radius: 50%;
+    animation: spin 1s linear infinite;
+  }
+  @keyframes spin {
+    to { transform: rotate(360deg); }
+  }
+</style>
   <div id="links"></div>
 <div id="number-section"></div>
+  <button id="backBtn">⬅ Back</button>
 
 <script>
 const excludedTexts = new Set([
@@ -25794,3 +25862,4 @@ Download Link: https://download.moviespage.site/download/page/36452
 </script>
 
 </html>
+
