--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     }
 h1 {
       text-align: center;
-      padding: 40px 10px;
+      padding: 30px 10px;
       font-size: 2.5rem;
       font-weight: 800;
       background: linear-gradient(to right, var(--accent), var(--accent2));
@@ -204,17 +204,25 @@ h1 {
   #links, #number-section {
     padding: 15px;
   }
-  .link {
-    display: block;
-    padding: 6px 8px;
-    margin-bottom: 4px;
-    background: var(--card);
-    color: var(--accent);
-    text-decoration: none;
-    border-radius: 4px;
-    font-weight: bold;
-    transition: background 0.2s, color 0.2s;
-  }
+#links {
+  display: flex;
+  flex-direction: column;
+  align-items: center; /* Centers all .link elements */
+}
+
+.link {
+  display: inline-block; /* Keep link width only as wide as content */
+  padding: 6px 12px;
+  margin: 4px 0;
+  background: var(--card);
+  color: var(--accent);
+  text-decoration: none;
+  border-radius: 4px;
+  font-weight: bold;
+  transition: background 0.2s, color 0.2s;
+  text-align: center; /* Center text inside */
+}
+
   .link:hover {
     background: var(--accent);
     color: var(--text);
@@ -255,7 +263,7 @@ h1 {
     to { transform: rotate(360deg); }
   }
 </style>
-</br>
+
 </br>
 </br>
   <div id="links"></div>
@@ -25865,5 +25873,6 @@ Download Link: https://download.moviespage.site/download/page/36452
 </script>
 
 </html>
+
 
 
