--- a/index.html
+++ b/index.html
@@ -201,10 +201,10 @@ h1 {
     display: none;
     font-weight: bold;
   }
-  #links, #number-section {
+  #link, #number-section {
     padding: 15px;
   }
-#links {
+#link {
   display: flex;
   flex-direction: column;
   align-items: center; /* Centers all .link elements */
@@ -279,7 +279,7 @@ const excludedTexts = new Set([
   "Latest Movies Updates","Tamil Movies Collection"
 ]);
 
-const mainContainer = document.getElementById('links');
+const mainContainer = document.getElementById('link');
 const numberSection = document.getElementById('number-section');
 const backBtn = document.getElementById('backBtn');
 const proxyUrl = 'https://api.allorigins.win/get?url=';
@@ -25875,6 +25875,7 @@ Download Link: https://download.moviespage.site/download/page/36452
 </script>
  
 </html>
+
 
 
 
