--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@ h1 {
     display: none;
     font-weight: bold;
   }
-  #link, #number-section {
+  #links, #number-section {
     padding: 15px;
   }
 #link {
@@ -263,9 +263,23 @@ h1 {
     to { transform: rotate(360deg); }
   }
 </style>
+  <br/>
+<br/>
+<br/>
+<div class="telegram-icon-center">
+  <a href="https://telegram.me/+V8nUElyN93U1ZTBl" target="_blank" class="telegram-icon">
+    <svg xmlns="http://www.w3.org/2000/svg" fill="white" viewbox="0 0 24 24">
+      <path d="M9.743 16.39L9.5 20.5c.572 0 .822-.246 1.12-.54l2.688-2.56 5.576 4.082c1.022.566 1.748.268 2.02-.95L24 4.82c.374-1.53-.545-2.127-1.556-1.76L1.204 10.47C-.24 11.03-.22 11.834.9 12.17l5.74 1.793 13.336-8.418c.63-.407 1.205-.182.734.26"/>
+    </path></svg>
+  </a>
+</div>
+<br/>
+<br/>
 
 </br>
 </br>
+<div id="links"></div>
+<div id="number-section"></div>
 
 <script>
 const excludedTexts = new Set([
@@ -279,7 +293,7 @@ const excludedTexts = new Set([
   "Latest Movies Updates","Tamil Movies Collection"
 ]);
 
-const mainContainer = document.getElementById('link');
+const mainContainer = document.getElementById('links');
 const numberSection = document.getElementById('number-section');
 const backBtn = document.getElementById('backBtn');
 const proxyUrl = 'https://api.allorigins.win/get?url=';
@@ -372,22 +386,9 @@ backBtn.onclick = () => {
 loadLinksFromUrl('https://moviesda12.com/');
 </script>
 
-<br/>
-<br/>
-<br/>
-<div class="telegram-icon-center">
-  <a href="https://telegram.me/+V8nUElyN93U1ZTBl" target="_blank" class="telegram-icon">
-    <svg xmlns="http://www.w3.org/2000/svg" fill="white" viewbox="0 0 24 24">
-      <path d="M9.743 16.39L9.5 20.5c.572 0 .822-.246 1.12-.54l2.688-2.56 5.576 4.082c1.022.566 1.748.268 2.02-.95L24 4.82c.374-1.53-.545-2.127-1.556-1.76L1.204 10.47C-.24 11.03-.22 11.834.9 12.17l5.74 1.793 13.336-8.418c.63-.407 1.205-.182.734.26"/>
-    </path></svg>
-  </a>
-</div>
-<br/>
-<br/>
-   <div id="link"></div>
-<div id="number-section"></div>
-  <button id="backBtn">⬅ Back</button>
 
+
+  
 <br/>
   <br/>
   <footer>&copy; 2025 Movies Aro. All rights reserved.</footer>
@@ -25875,6 +25876,7 @@ Download Link: https://download.moviespage.site/download/page/36452
 </script>
  
 </html>
+
 
 
 
