--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@ h1 {
 
   <style>
  
-  #backBtn {
+   #backBtn {
     background: var(--accent2);
     color: var(--text);
     border: none;
@@ -204,25 +204,17 @@ h1 {
   #links, #number-section {
     padding: 15px;
   }
-#link {
-  display: flex;
-  flex-direction: column;
-  align-items: center; /* Centers all .link elements */
-}
-
-.link {
-  display: inline-block; /* Keep link width only as wide as content */
-  padding: 6px 12px;
-  margin: 4px 0;
- 
-  color: var(--accent);
-  text-decoration: none;
-  border-radius: 4px;
- 
-  transition: background 0.2s, color 0.2s;
-  text-align: center; /* Center text inside */
-}
-
+  .link {
+    display: block;
+    padding: 6px 8px;
+    margin-bottom: 4px;
+    background: var(--card);
+    color: var(--accent);
+    text-decoration: none;
+    border-radius: 4px;
+    font-weight: bold;
+    transition: background 0.2s, color 0.2s;
+  }
   .link:hover {
     background: var(--accent);
     color: var(--text);
@@ -25876,6 +25868,7 @@ Download Link: https://download.moviespage.site/download/page/36452
 </script>
  
 </html>
+
 
 
 
