--- a/index.html
+++ b/index.html
@@ -189,17 +189,25 @@ h1 {
   #links, #number-section {
     padding: 15px;
   }
-  .link {
-    display: block;
-    padding: 6px 8px;
-    margin-bottom: 4px;
-    background: var(--card);
-    color: var(--accent);
-    text-decoration: none;
-    border-radius: 4px;
-    font-weight: bold;
-    transition: background 0.2s, color 0.2s;
-  }
+  #links {
+  display: flex;
+  flex-direction: column;
+  align-items: center; /* Centers all .link elements */
+}
+
+.link {
+  display: inline-block; /* Keep link width only as wide as content */
+  padding: 6px 12px;
+  margin: 4px 0;
+ 
+  color: var(--accent);
+  text-decoration: none;
+  border-radius: 4px;
+ 
+  transition: background 0.2s, color 0.2s;
+  text-align: center; /* Center text inside */
+}
+
   .link:hover {
     background: var(--accent);
     color: var(--text);
@@ -25868,6 +25876,7 @@ Download Link: https://download.moviespage.site/download/page/36452
 </script>
  
 </html>
+
 
 
 
