--- a/index.html
+++ b/index.html
@@ -25867,11 +25867,12 @@ Download Link: https://download.moviespage.site/download/page/36452
   qEl.addEventListener('keydown', (e) => { if (e.key === 'Enter') doSearch(); });
   searchBtn.addEventListener('click', doSearch);
 
-  outEl.innerHTML = '<div class="hint">Search <strong>Full Movie Name</strong> Correctly.</div>';
+  outEl.innerHTML = '';
 });
 </script>
  
 </html>
+
 
 
 
