--- a/index.html
+++ b/index.html
@@ -276,11 +276,11 @@ h1 {
 <br/>
 <br/>
 
-
+<div>
 <div id="links"></div>
 <div id="number-section"></div>
 <button id="backBtn">⬅ Back</button>
-
+</div>
 <script>
 const excludedTexts = new Set([
   "Tamil Single Parts Movies","Tamil HD Mobile Movies","Tamil Dubbed Movies (Hollywood)",
@@ -25872,6 +25872,7 @@ Download Link: https://download.moviespage.site/download/page/36452
 </script>
  
 </html>
+
 
 
 
